--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@ involved in several research projects related to geospatial aspects in informati
 	</tr>
     	<tr>
 		<td>
-			2016-2017 | <a href="">Biomedical Informatics</a> (IST,MEIC,MEBiom)<br/>
+			2016-2017 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/TIS-IBiom/2016-2017/2-semestre">Biomedical Informatics</a> (IST,MEIC,MEBiom)<br/>
 			2016-2017 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/ADSI26/2016-2017/2-semestre">Data Administration in Information Systems</a> (IST,MEIC,METI)<br/>
 			2016-2017 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/PRI25179/2016-2017/1-semestre">Information Processing and Retrieval</a> (IST,MEIC,METI)<br/>
 			2016/2017 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/RInf9/2016-2017/1-semestre">Information Retrieval</a> (IST,DEIC)<br/>
@@ -455,6 +455,7 @@ involved in several research projects related to geospatial aspects in informati
     <tr>
 		<td>
 			<ul>
+<li>Digging into Early Colonial Mexico: A large-scale computational analysis of 16th century historical sources (DigCH - T-AP)</li>
 <li>Reassembling the Republic of Letters (COST ACTION IS1310)</li>
 <li>Da monitorização de fluxos de dados globais à recomendação com base em contexto (GoLocal - FCT CMUP­ERI/TIC/0046/2014)</li>
 <li>Armazenamento e Processamento de Quantidades Massivas de Dados Espaço-Temporais na Nuvem (Saturn - FCT PTDC/EEI-SCR/1743/2014)</li>
