--- a/index.html
+++ b/index.html
@@ -695,6 +695,9 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>						
 						<strong>M.Sc. evaluation comittees: </strong>
+						<a href="">André Santos</a> |
+						<a href="">Tiago Simões</a> |
+						<a href="">Ricardo Pinto</a> |
 						<a href="">João Caramujo</a> |
 						<a href="">Joana Gomes</a> |
 						<a href="">Tiago Santos</a> |
