--- a/index.html
+++ b/index.html
@@ -317,6 +317,7 @@ involved in several research projects related to geospatial aspects in informati
 			<h3>Conference and Workshop Papers</h3>
 
 			<ul>
+<li>Francisco Duarte, Bruno Martins, Cátia Sousa Pinto, and Mário J. Silva <i>A Deep Learning Method for ICD-10 Coding of Free-Text Death Certificates</i>, Proceedings of the Portuguese Conference on Artificial Intelligence, 2017</li>
 <li>Iman Mirrezaei, Bruno Martins, and Isabel F. Cruz <i>A Distantly Supervised Method for Extracting Spatio-Temporal Information from Text</i>, Proceedings of the ACM SIGSPATIAL International Conference on Advances in Geographic Information Systems, 2016</li>
 <li>Pedro Fialho, Ricardo Marques, Bruno Martins, Luísa Coheur and Paulo Quaresma, <i>Introducing INESC-ID@ASSIN for measuring semantic similarity and recognizing textual entailment</i>, Proceedings of the ASSIN Shared Task at the International Conference on the Computational Processing of Portuguese, 2016</li>
 <li>Tiago Gonçalves, Ana Paula Afonso and Bruno Martins, <i>Why not both? – Combining 2D maps and 3D space-time cubes for human trajectory data visualization</i>, Proceedings of the British Human Computer Interaction Conference, 2016</li>
@@ -570,6 +571,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of organization committees: </strong>
+						<a href="https://bgmartins.github.io/sigspatial-geohumanities/">SIGSPATIAL GeoHumanities'17</a> |
 						<a href="http://lxmls.it.pt/">LxMLS'17</a> |
 						<a href="">TeMA'17</a> |
 						<a href="http://lxmls.it.pt/">LxMLS'16</a> |
