--- a/index.html
+++ b/index.html
@@ -595,6 +595,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of programe committees and reviewer: </strong>
+						<a href="http://www.sigapp.org/sac/sac2018/">SAC'18</a> |
 						<a href="http://www.conll.org/2017">CoNLL'17</a> |
 						<a href="http://www.geo.uzh.ch/~rsp/gir17/">GIR'17</a> |
 						<a href="http://sigspatial2017.sigspatial.org">SIGSPATIAL'17</a> |
