--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@ involved in several research projects related to geospatial aspects in informati
 			<li>Alexey Mazalov, <a href="https://fenix.tecnico.ulisboa.pt/departamentos/dei/dissertacao/1972678479053259"><i>Spatial role labeling with convolutional neural networks</i></a>, IST, 2016 (<i>co-supervised with Prof. David Matos</i>)</li> <!-- 16 valores -->
 			<li>José Raposo, <a href="https://fenix.tecnico.ulisboa.pt/departamentos/dei/dissertacao/283828618789894"><i>Open Information Extraction from Dialogue Transcriptions</i></a>, IST, 2016 (<i>co-supervised with Prof. David Matos</i>)</li> <!-- 16 valores -->
 			<li>Ricardo Lavareda, <a href="https://fenix.tecnico.ulisboa.pt/departamentos/dei/dissertacao/1972678479053080"><i>Entity Linking over Short Texts</i></a>, IST, 2016 (<i>co-supervised with Prof. Pável Calado</i>)</li> <!-- 16 valores -->
-			<li>Diogo Andrade, <a href=""><i>IPSentinel e OGC - Infra-estrutura Portuguesa para dados Sentinel e Acesso a Dados através de Protocolos OGC</i></a>, IST, 2017 (<i>co-supervised with Prof. Mário Silva</i>)</li> <!-- ?? valores -->
+			<li>Diogo Andrade, <a href=""><i>IPSentinel e OGC - Infra-estrutura Portuguesa para dados Sentinel e Acesso a Dados através de Protocolos OGC</i></a>, IST, 2017 (<i>co-supervised with Prof. Mário Silva</i>)</li> <!-- 17 valores -->
 			<li>Francisco Carreira, <a href=""><i>Extracção de Palavras Chave e Caracterização Geo-Temporal da sua Ocorrência</i></a>, IST, 2017 (<i>co-supervised with Dr. Miguel Won</i>)</li> <!-- ?? valores -->
 			<li>Ricardo Custódio, <a href=""><i>Resolução de nomes de locais em documentos de texto</i></a>, IST, 2017 (<i>co-supervised with Dr. Miguel Won</i>)</li> <!-- ?? valores -->
 			<li>Carlos Ribeiro, <a href=""><i>Aprendizagem automática distribuída para análise de dados geo-espaciais e/ou geo-temporais</i></a>, IST, 2017 (<i>co-supervised with Prof. Paolo Romano</i>)</li> <!-- ?? valores -->
@@ -681,8 +681,8 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>						
 						<strong>Ph.D. evaluation comittees: </strong>
-						<a href="https://www.researchgate.net/profile/Ricardo_Malheiro3">Pedro Saleiro</a> | 
-						<a href="">Ricardo Malheiro</a> | 
+						<a href="https://scholar.google.com/citations?user=Wqz2hN4AAAAJ&hl=en">Pedro Saleiro</a> | 
+						<a href="http://docentes.ismt.pt/~rsmal/">Ricardo Malheiro</a> | 
 						<a href="https://sigarra.up.pt/feup/pt/fest_geral.cursos_list?pv_num_unico=201203581&pv_redirect_perc_acad=S">Manika Kar</a> | 
 						<a href="https://www.cisuc.uc.pt/people/show/235">Olga Craveiro</a> | 
 						<a href="http://www.eawag.ch/en/aboutus/portrait/organisation/staff/profile/luis-de-sousa/show/">Luís de Sousa</a> | 
@@ -701,19 +701,19 @@ involved in several research projects related to geospatial aspects in informati
 						<a href="">André Santos</a> |
 						<a href="">Tiago Simões</a> |
 						<a href="">Ricardo Pinto</a> |
-						<a href="">João Caramujo</a> |
+						<a href="https://fenix.tecnico.ulisboa.pt/departamentos/dei/dissertacao/846778572211754">João Caramujo</a> |
 						<a href="">Joana Gomes</a> |
-						<a href="">Tiago Santos</a> |
+						<a href="https://fenix.tecnico.ulisboa.pt/departamentos/dei/dissertacao/565303595500952">Tiago Santos</a> |
 						<a href="FCUL">Carlos Santos</a> |
 						<a href="FCUL">André Correia</a> |
 						<a href="FEUP">Gil Rocha</a> |
 						<a href="FEUP">João Aires</a> |
 						<a href="FEUP">Ana Sousa</a> |
-						<a href="">Rita Curado</a> |
-						<a href="">Afonso Silva</a> |
-						<a href="">Daniel Baptista</a> |
+						<a href="https://fenix.tecnico.ulisboa.pt/departamentos/dei/dissertacao/283828618789653">Rita Curado</a> |
+						<a href="https://fenix.tecnico.ulisboa.pt/departamentos/dei/dissertacao/1691203502342246">Afonso Silva</a> |
+						<a href="https://fenix.tecnico.ulisboa.pt/departamentos/dei/dissertacao/1691203502342233">Daniel Baptista</a> |
 						<a href="FCT/UNL">Bruno Candeias</a> |
-						<a href="FCSH">Joana Cruz Diniz</a> |
+						<a href="https://run.unl.pt/handle/10362/18351">Joana Cruz Diniz</a> |
 						<a href="https://fenix.tecnico.ulisboa.pt/cursos/meic-a/dissertacao/565303595500704">Filipe Carrapeto</a> |
 						<a href="https://fenix.tecnico.ulisboa.pt/cursos/meic-a/dissertacao/1128253548920876">José Correia</a> |
 						<a href="https://fenix.tecnico.ulisboa.pt/cursos/meic-a/dissertacao/1972678479052915">Hugo Lopes</a> |
