--- a/index.html
+++ b/index.html
@@ -596,6 +596,7 @@ involved in several research projects related to geospatial aspects in informati
 					<ul><li>
 						<strong>Member of programe committees and reviewer: </strong>
 						<a href="http://www.sigapp.org/sac/sac2018/">SAC'18</a> |
+						<a href="http://www.dslab.it.aoyama.ac.jp/dsaa2017/specialsessions/#EnGeoData">IEEE DSAA'17 - EnGeoData</a> |
 						<a href="http://www.conll.org/2017">CoNLL'17</a> |
 						<a href="http://www.geo.uzh.ch/~rsp/gir17/">GIR'17</a> |
 						<a href="http://sigspatial2017.sigspatial.org">SIGSPATIAL'17</a> |
@@ -698,6 +699,9 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>						
 						<strong>M.Sc. evaluation comittees: </strong>
+						<a href="FEUP">Paula Fortuna</a> |
+						<a href="FEUP">André Pires</a> |
+						<a href="FEUP">João Soares</a> |
 						<a href="">André Santos</a> |
 						<a href="">Tiago Simões</a> |
 						<a href="FCT/UNL">Ricardo Pinto</a> |
