--- a/index.html
+++ b/index.html
@@ -595,6 +595,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of programe committees and reviewer: </strong>
+						<a href="http://www.aaai.org/Conferences/AAAI/2018/aaai18call.php">AAAI'18</a> |
 						<a href="http://www.sigapp.org/sac/sac2018/">SAC'18</a> |
 						<a href="http://www.dslab.it.aoyama.ac.jp/dsaa2017/specialsessions/#EnGeoData">IEEE DSAA'17 - EnGeoData</a> |
 						<a href="http://www.conll.org/2017">CoNLL'17</a> |
