--- a/index.html
+++ b/index.html
@@ -586,6 +586,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of editorial committees: </strong>
+						<a href="https://github.com/bgmartins/sigspatial-geohumanities/raw/master/Proposal%20for%20special%20Issue%20in%20Geohumanities%20IJGIS.pdf">International Journal of Geographical Information Science - Special Issue on Spatial Computing for the Digital Humanities</a> |
 						<a href="http://www.mdpi.com/journal/information/editors/">Information</a> |
 						<a href="http://www.springer.com/cda/content/document/cda_downloaddocument/SI_Environmental+and+Geospatial+Data+Analytics.pdf?SGWID=0-0-45-1578169-p177383280">International Journal of Data Science and Analytics - Special Issue on Environmental and Geospatial Data Analytics</a>
 					</li></ul>
