--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@ involved in several research projects related to geospatial aspects in informati
     <tr>
 		<td>
 			<ul>
-<li>Digging into Early Colonial Mexico: A large-scale computational analysis of 16th century historical sources (DigCH - T-AP)</li>
+<li><a href="https://diggingintodata.org/awards/2016/project/digging-early-colonial-mexico">Digging into Early Colonial Mexico: A large-scale computational analysis of 16th century historical sources (DigCH - T-AP)</a></li>
 <li>Reassembling the Republic of Letters (COST ACTION IS1310)</li>
 <li>Da monitorização de fluxos de dados globais à recomendação com base em contexto (GoLocal - FCT CMUP­ERI/TIC/0046/2014)</li>
 <li>Armazenamento e Processamento de Quantidades Massivas de Dados Espaço-Temporais na Nuvem (Saturn - FCT PTDC/EEI-SCR/1743/2014)</li>
