--- a/index.html
+++ b/index.html
@@ -547,6 +547,7 @@ involved in several research projects related to geospatial aspects in informati
 			<li>José Raposo, <a href="https://fenix.tecnico.ulisboa.pt/departamentos/dei/dissertacao/283828618789894"><i>Open Information Extraction from Dialogue Transcriptions</i></a>, IST, 2016 (<i>co-supervised with Prof. David Matos</i>)</li> <!-- 16 valores -->
 			<li>Ricardo Lavareda, <a href="https://fenix.tecnico.ulisboa.pt/departamentos/dei/dissertacao/1972678479053080"><i>Entity Linking over Short Texts</i></a>, IST, 2016 (<i>co-supervised with Prof. Pável Calado</i>)</li> <!-- 16 valores -->
 			<li>Diogo Andrade, <a href=""><i>IPSentinel e OGC - Infra-estrutura Portuguesa para dados Sentinel e Acesso a Dados através de Protocolos OGC</i></a>, IST, 2017 (<i>co-supervised with Prof. Mário Silva</i>)</li> <!-- 17 valores -->
+			
 			<li>Francisco Carreira, <a href=""><i>Extracção de Palavras Chave e Caracterização Geo-Temporal da sua Ocorrência</i></a>, IST, 2017 (<i>co-supervised with Dr. Miguel Won</i>)</li> <!-- ?? valores -->
 			<li>Ricardo Custódio, <a href=""><i>Resolução de nomes de locais em documentos de texto</i></a>, IST, 2017 (<i>co-supervised with Dr. Miguel Won</i>)</li> <!-- ?? valores -->
 			<li>Carlos Ribeiro, <a href=""><i>Aprendizagem automática distribuída para análise de dados geo-espaciais e/ou geo-temporais</i></a>, IST, 2017 (<i>co-supervised with Prof. Paolo Romano</i>)</li> <!-- ?? valores -->
@@ -554,11 +555,13 @@ involved in several research projects related to geospatial aspects in informati
 			<li>Mauro Teles, <a href=""><i>Geocodificação e Datação Automática de Obras Musicais com Base no Conteúdo Audio</i></a>, IST, 2017 (<i>co-supervised with Prof. David Matos</i>)</li> <!-- ?? valores -->
 			<li>Rui Santos, <a href=""><i>Georreferenciação automática de descrições de rotas históricas</i></a>, IST, 2017 (<i>co-supervised with Prof. Patricia Murrieta-Flores</i>)</li> <!-- ?? valores -->
 			<li>Valter Matos, <a href=""><i>Resolução de Entidades Duplicadas Através da Combinação de Medidas de Similaridade</i></a>, IST, 2017</li> <!-- ?? valores -->
-			<li>Tiago Castanheira, <a href=""><i>Classificação automática de causas de mortalidade</i></a>, IST, 2017 (<i>co-supervised with Prof. Mário Silva</i>)</li> <!-- ?? valores -->
+			<li>Francisco Duarte, <a href=""><i>Classificação automática de causas de mortalidade</i></a>, IST, 2017 (<i>co-supervised with Prof. Mário J. Silva</i>)</li> <!-- ?? valores -->
+			<li>Barbara Pinho, <a href=""><i>SleepData - A sleep disorders clinical database</i></a>, IST, 2017 (<i>co-supervised with Prof. Mário J. Silva</i>)</li> <!-- ?? valores -->
+			<li>Tiago Castanheira, <a href=""><i>SleepData - A study on sleep disorders</i></a>, IST, 2017 (<i>co-supervised with Prof. Mário J. Silva</i>)</li> <!-- ?? valores -->
 			<li>Paulo Alves, <a href=""><i>Extracção de argumentos desde documentos textuais</i></a>, IST, 2017 (<i>co-supervised with Dr. Miguel Won</i>)</li> <!-- ?? valores -->
 			<li>Frederico Rodrigues, <a href=""><i>Sumarização Automática de Documentos Através de Algoritmos Genéticos</i></a>, IST, 2017 (<i>co-supervised with Prof. Ricardo Ribeiro</i>)</li> <!-- ?? valores -->
 			<li>Miguel Vieira, <a href=""><i>Vigilância Epidemiológica de Eventos de Massas</i></a>, IST, 2017 (<i>co-supervised with Prof. Mário J. Silva</i>)</li> <!-- ?? valores -->
-			<li>Nuno Ramanlal, <a href=""><i>Atribuição automática de coordenadas geo-espaciais a fotos em arquivos históricos</i></a>, IST, 2017 (<i>co-supervised with Dr. Patricia Murrieta-Flores</i>)</li> <!-- ?? valores -->
+			<li>Nuno Ramanlal, <a href=""><i>Atribuição automática de coordenadas geo-espaciais a fotos em arquivos históricos</i></a>, IST, 2017 (<i>co-supervised with Prof. Patricia Murrieta-Flores</i>)</li> <!-- ?? valores -->
 			<li>Bernardo Casaleiro, <a href=""><i>Desambiguação de etiquetas morfossintáticas com redes neuronais recorrentes e word embeddings</i></a>, IST, 2017 (<i>co-supervised with Prof. Nuno Mamede</i>)</li> <!-- ?? valores -->
 			<li>Luís Freixinho, <a href=""><i>Uso de redes neuronais profundas para classificação do território combinando imagens de satélite e fotos geo-referenciadas</i></a>, IST, 2017 (<i>co-supervised with Prof. João Moura Pires</i>)</li> <!-- ?? valores -->
 			<li>Ângela Ferreira, <a href=""><i>Question generation with deep neural networks</i></a>, IST, 2017 (<i>co-supervised with Prof. Luísa Coheur</i>)</li> <!-- ?? valores -->
