--- a/index.html
+++ b/index.html
@@ -493,6 +493,7 @@ involved in several research projects related to geospatial aspects in informati
 			<li>Tiago Gonçalves, <i>Visual Analysis of Human Mobility Data</i>, FCUL (<i>ongoing co-supervision with Prof. Ana Paula Afonso</i>)</li>
 			<li>Miguel Costa, <i>Summarizing News Articles</i>, IST (<i>ongoing</i>)</li> 
 			<li>João Monteiro, <i>Mining multi-source and multi-modal geo-referenced information</i>, IST (<i>ongoing co-supervision with Prof. João Moura Pires</i>)</li>
+			<li>Manuel Reis, <i>High performance computing for machine learning and geospatial data mining applications</i>, IST (<i>ongoing co-supervision with Prof. Paolo Romano</i>)</li>
 			</ul>
 			<h3>MSc Students</h3>
 			<ul>
