--- a/index.html
+++ b/index.html
@@ -320,6 +320,7 @@ involved in several research projects related to geospatial aspects in informati
 			<h3>Conference and Workshop Papers</h3>
 
 			<ul>
+<li>João Monteiro, Asanobu Kitamoto, and Bruno Martins <i>Situational Awareness from Social Media Photographs Using Automated Image Captioning</i>, Proceedings of the IEEE International Conference on Data Science and Advanced Analytics, 2017</li>				
 <li>Francisco Duarte, Bruno Martins, Cátia Sousa Pinto, and Mário J. Silva <i>A Deep Learning Method for ICD-10 Coding of Free-Text Death Certificates</i>, Proceedings of the Portuguese Conference on Artificial Intelligence, 2017</li>
 <li>Iman Mirrezaei, Bruno Martins, and Isabel F. Cruz <i>A Distantly Supervised Method for Extracting Spatio-Temporal Information from Text</i>, Proceedings of the ACM SIGSPATIAL International Conference on Advances in Geographic Information Systems, 2016</li>
 <li>Pedro Fialho, Ricardo Marques, Bruno Martins, Luísa Coheur and Paulo Quaresma, <i>Introducing INESC-ID@ASSIN for measuring semantic similarity and recognizing textual entailment</i>, Proceedings of the ASSIN Shared Task at the International Conference on the Computational Processing of Portuguese, 2016</li>
@@ -459,7 +460,7 @@ involved in several research projects related to geospatial aspects in informati
     <tr>
 		<td>
 			<ul>
-<li><a href="https://diggingintodata.org/awards/2016/project/digging-early-colonial-mexico">Digging into Early Colonial Mexico: A large-scale computational analysis of 16th century historical sources (DigCH - T-AP)</a></li>
+<li><a href="https://diggingintodata.org/awards/2016/project/digging-early-colonial-mexico">Digging into Early Colonial Mexico: A large-scale computational analysis of 16th century historical sources (DigCH - T-AP HJ-253525)</a></li>
 <li>Reassembling the Republic of Letters (COST ACTION IS1310)</li>
 <li>Da monitorização de fluxos de dados globais à recomendação com base em contexto (GoLocal - FCT CMUP­ERI/TIC/0046/2014)</li>
 <li>Armazenamento e Processamento de Quantidades Massivas de Dados Espaço-Temporais na Nuvem (Saturn - FCT PTDC/EEI-SCR/1743/2014)</li>
@@ -664,6 +665,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Reviewer in international journals: </strong>
+						<a href="http://www.emeraldinsight.com/loi/prog">Program</a> |
 						<a href="http://onlinelibrary.wiley.com/journal/10.1111/(ISSN)1468-0394">Expert Systems</a> |						
 						<a href="http://onlinelibrary.wiley.com/journal/10.1111/(ISSN)1467-9671">Transactions in GIS</a> |
 						<a href="http://www.josis.org">Journal of Spatial Information Science</a> |
