--- a/index.html
+++ b/index.html
@@ -707,7 +707,9 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>						
 						<strong>Ph.D. evaluation comittees: </strong>
+						<a href="http://www.contrib.andrew.cmu.edu/~baojiany/">Baojiang (Chris) Yang</a> | 
 						<a href="https://scholar.google.com/citations?user=Wqz2hN4AAAAJ&hl=en">Pedro Saleiro</a> | 
+						<a href="https://www.cs.uic.edu/~imirreza/">Iman Mirrezaei</a> | 
 						<a href="http://docentes.ismt.pt/~rsmal/">Ricardo Malheiro</a> | 
 						<a href="https://sigarra.up.pt/feup/pt/fest_geral.cursos_list?pv_num_unico=201203581&pv_redirect_perc_acad=S">Manika Kar</a> | 
 						<a href="https://www.cisuc.uc.pt/people/show/235">Olga Craveiro</a> | 
