--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="Keywords" content="Bruno Martins, Technical University of Lisbon" />
 	<meta name="Description" content="Professor at Instituto Superior Técnico, University of Lisbon, Portugal." />
 	<link rel="shortcut icon" href="favicon.png" type="image/x-icon" />
-	<link rel="stylesheet" type="text/css" media="screen" href="iststyle.css" />E
+	<link rel="stylesheet" type="text/css" media="screen" href="iststyle.css" />
 	<link rel="stylesheet" type="text/css" media="print" href="print.css" />
 </head>
 <body>
