--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@ involved in several research projects related to geospatial aspects in informati
 
 			<ul>
 <!-- <li>Rui Santos, Patricia Murrieta-Flores, Pável Calado and Bruno Martins, <i>Toponym Matching Through Deep Neural Networks</i>, International Journal of Geographical Information Science, 2017 [<a href="">PDF</a>]</li> -->
-<li>Rui Santos, Patricia Murrieta-Flores and Bruno Martins, <i>Combining Multiple String Similarity Metrics for Effective Toponym Matching</i>, International Journal of Digital Earth, 2017 [<a href="">PDF</a>]</li>		
+<li>Rui Santos, Patricia Murrieta-Flores and Bruno Martins, <i>Combining Multiple String Similarity Metrics for Effective Toponym Matching</i>, International Journal of Digital Earth, 2017 [<a href="http://dx.doi.org/10.1080/17538947.2017.1371253">PDF</a>]</li>		
 <li>Fernando Melo and Bruno Martins, <i>Automated Geocoding of Textual Documents: A Survey of Current Approaches</i>, Transactions in GIS, vol. 21, no. 1, 2017 [<a href="http://onlinelibrary.wiley.com/doi/10.1111/tgis.12212/full">PDF</a>]</li>
 <li>Tiago Gonçalves, Ana Paula Afonso and Bruno Martins, <i>Cartographic Visualization of Human Trajectory Data: Overview and Analysis</i>, Journal of Location Based Services, vol. 9, no. 2, 2015 [<a href="http://www.tandfonline.com/doi/full/10.1080/17489725.2015.1074736">PDF</a>]</li>
 <li>João Santos, Ivo Anastácio and Bruno Martins, <i>Desambiguação de Entidades Mencionadas em Textos na Língua Portuguesa ou Espanhola</i>, IEEE Latin America, vol. 13, no. 3, 2015 [<a href="http://www.revistaieeela.pea.usp.br/issues/vol13issue3March2015/42Santos.htm">PDF</a>]</li>
