--- a/index.html
+++ b/index.html
@@ -170,6 +170,11 @@ involved in several research projects related to geospatial aspects in informati
 						<strong>GitHub: </strong><a href="https://github.com/bgmartins">https://github.com/bgmartins</a>
 					</td>
 				</tr>
+				<tr>
+					<td>
+						<strong>Twitter: </strong><a href="https://twitter.com/bgmartins">https://twitter.com/bgmartins</a>
+					</td>
+				</tr>
 				<!-- <tr>
 					<td>
 						<strong>DataJoy: </strong><a href="https://www.getdatajoy.com/user/568cf511d3247a2255716ff3">https://www.getdatajoy.com/user/568cf511d3247a2255716ff3</a>
