--- a/index.html
+++ b/index.html
@@ -622,6 +622,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of programe committees and reviewer: </strong>
+						<a href="https://agile-online.org/index.php/home-2018">AGILE'18</a> |
 						<a href="">W2GIS'18</a> |
 						<a href="http://www.aaai.org/Conferences/AAAI/2018/aaai18call.php">AAAI'18</a> |
 						<a href="http://www.sigapp.org/sac/sac2018/">SAC'18</a> |
@@ -672,6 +673,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Reviewer in international journals: </strong>
+						<a href="http://www.mdpi.com/journal/algorithms">Algorithms</a> |
 						<a href="http://www.emeraldinsight.com/loi/prog">Program</a> |
 						<a href="http://onlinelibrary.wiley.com/journal/10.1111/(ISSN)1468-0394">Expert Systems</a> |						
 						<a href="http://onlinelibrary.wiley.com/journal/10.1111/(ISSN)1467-9671">Transactions in GIS</a> |
