--- a/index.html
+++ b/index.html
@@ -570,16 +570,18 @@ involved in several research projects related to geospatial aspects in informati
 			<li>Francisco Duarte, <a href=""><i>Classificação automática de causas de mortalidade</i></a>, IST, 2017 (<i>co-supervised with Prof. Mário J. Silva</i>)</li> <!-- ?? valores -->
 			<li>Barbara Pinho, <a href=""><i>SleepData - A sleep disorders clinical database</i></a>, IST, 2017 (<i>co-supervised with Prof. Mário J. Silva</i>)</li> <!-- ?? valores -->
 			<li>Tiago Castanheira, <a href=""><i>SleepData - A study on sleep disorders</i></a>, IST, 2017 (<i>co-supervised with Prof. Mário J. Silva</i>)</li> <!-- ?? valores -->
-			<li>Paulo Alves, <a href=""><i>Extracção de argumentos desde documentos textuais</i></a>, IST, 2017 (<i>co-supervised with Dr. Miguel Won</i>)</li> <!-- ?? valores -->
-			<li>Frederico Rodrigues, <a href=""><i>Sumarização Automática de Documentos Através de Algoritmos Genéticos</i></a>, IST, 2017 (<i>co-supervised with Prof. Ricardo Ribeiro</i>)</li> <!-- ?? valores -->
-			<li>Miguel Vieira, <a href=""><i>Vigilância Epidemiológica de Eventos de Massas</i></a>, IST, 2017 (<i>co-supervised with Prof. Mário J. Silva</i>)</li> <!-- ?? valores -->
-			<li>Nuno Ramanlal, <a href=""><i>Atribuição automática de coordenadas geo-espaciais a fotos em arquivos históricos</i></a>, IST, 2017 (<i>co-supervised with Prof. Patricia Murrieta-Flores</i>)</li> <!-- ?? valores -->
-			<li>Bernardo Casaleiro, <a href=""><i>Desambiguação de etiquetas morfossintáticas com redes neuronais recorrentes e word embeddings</i></a>, IST, 2017 (<i>co-supervised with Prof. Nuno Mamede</i>)</li> <!-- ?? valores -->
-			<li>Luís Freixinho, <a href=""><i>Uso de redes neuronais profundas para classificação do território combinando imagens de satélite e fotos geo-referenciadas</i></a>, IST, 2017 (<i>co-supervised with Prof. João Moura Pires</i>)</li> <!-- ?? valores -->
-			<li>Alexandre Marinho, <a href=""><i>Mapeamento de registos duplicados com técnicas de deep learning</i></a>, IST, 2017 (<i>co-supervised with Prof. Pavel Calado</i>)</li> <!-- ?? valores -->
-			<li>Luís Borges, <a href=""><i>Análise de texto com redes neuronais profundas para a detecção de notícias falsas</i></a>, IST, 2017 (<i>co-supervised with Prof. Pavel Calado</i>)</li> <!-- ?? valores -->
-			<li>Filipe Monteiro, <a href=""><i>Classificar restaurantes de acordo com dados do Yelp e relatórios de inspecção sanitária</i></a>, IST, 2017 (<i>co-supervised with Prof. Mário J. Silva</i>)</li> <!-- ?? valores -->
-			<li>João Godinho, <a href=""><i>Detecção e atribuição de citações em artigos de jornais</i></a>, IST, 2017 (<i>co-supervised with Prof. Henrique Cardoso</i>)</li> <!-- ?? valores -->
+			<li>Paulo Alves, <a href=""><i>Extracção de argumentos desde documentos textuais</i></a>, IST, 2018 (<i>co-supervised with Dr. Miguel Won</i>)</li> <!-- ?? valores -->
+			<li>Frederico Rodrigues, <a href=""><i>Sumarização Automática de Documentos Através de Algoritmos Genéticos</i></a>, IST, 2018 (<i>co-supervised with Prof. Ricardo Ribeiro</i>)</li> <!-- ?? valores -->
+			<li>Miguel Vieira, <a href=""><i>Vigilância Epidemiológica de Eventos de Massas</i></a>, IST, 2018 (<i>co-supervised with Prof. Mário J. Silva</i>)</li> <!-- ?? valores -->
+			<li>Nuno Ramanlal, <a href=""><i>Atribuição automática de coordenadas geo-espaciais a fotos em arquivos históricos</i></a>, IST, 2018 (<i>co-supervised with Prof. Patricia Murrieta-Flores</i>)</li> <!-- ?? valores -->
+			<li>Bernardo Casaleiro, <a href=""><i>Desambiguação de etiquetas morfossintáticas com redes neuronais recorrentes e word embeddings</i></a>, IST, 2018 (<i>co-supervised with Prof. Nuno Mamede</i>)</li> <!-- ?? valores -->
+			<li>Luís Freixinho, <a href=""><i>Uso de redes neuronais profundas para classificação do território combinando imagens de satélite e fotos geo-referenciadas</i></a>, IST, 2018 (<i>co-supervised with Prof. João Moura Pires</i>)</li> <!-- ?? valores -->
+			<li>Alexandre Marinho, <a href=""><i>Mapeamento de registos duplicados com técnicas de deep learning</i></a>, IST, 2018 (<i>co-supervised with Prof. Pavel Calado</i>)</li> <!-- ?? valores -->
+			<li>Luís Borges, <a href=""><i>Análise de texto com redes neuronais profundas para a detecção de notícias falsas</i></a>, IST, 2018 (<i>co-supervised with Prof. Pavel Calado</i>)</li> <!-- ?? valores -->
+			<li>Filipe Monteiro, <a href=""><i>Classificar restaurantes de acordo com dados do Yelp e relatórios de inspecção sanitária</i></a>, IST, 2018 (<i>co-supervised with Prof. Mário J. Silva</i>)</li> <!-- ?? valores -->
+			<li>João Godinho, <a href=""><i>Detecção e atribuição de citações em artigos de jornais</i></a>, IST, 2018 (<i>co-supervised with Prof. Henrique Cardoso</i>)</li> <!-- ?? valores -->
+			<li>Miguel Vieira, <a href=""><i>Vigilância Epidemiológica de Eventos de Massas</i></a>, IST, 2018 (<i>co-supervised with Prof. Henrique Cardoso</i>)</li> <!-- ?? valores -->			
+				
 			<!-- <li>Marina Ferreira, <a href=""><i></i></a>, IST, 2017 (<i>co-supervised with Prof. Pável Calado</i>)</li>--> <!-- ?? valores -->
 			<!-- <li>Ângela Ferreira, <a href=""><i>Question generation with deep neural networks</i></a>, IST, 2017 (<i>co-supervised with Prof. Luísa Coheur</i>)</li>--> <!-- ?? valores -->				
 			</ul>
