--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@ involved in several research projects related to geospatial aspects in informati
 
 			<ul>
 
-<li>Bruno Martins, <i>Geospatial Information Extraction from Text</i>, Morgan & Claypool Synthesis Series, 2015 </li>
+<li>Bruno Martins, <i>Geospatial Information Extraction from Text</i>, Morgan & Claypool Synthesis Series, 2018 </li>
 
 			</ul>
 -->
@@ -313,6 +313,7 @@ involved in several research projects related to geospatial aspects in informati
 			<h3>International Journal Papers</h3>
 
 			<ul>
+<!-- <li>João Monteiro, Bruno Martins and João M. Pires <i>A Hybrid Approach for the Spatial Disaggregation of Socio-Economic Indicators</i>, International Journal of Data Science and Analytics, 2018 [<a href="">PDF</a>]</li> -->
 <!-- <li>Rui Santos, Patricia Murrieta-Flores, Pável Calado and Bruno Martins, <i>Toponym Matching Through Deep Neural Networks</i>, International Journal of Geographical Information Science, 2017 [<a href="">PDF</a>]</li> -->
 <li>Rui Santos, Patricia Murrieta-Flores and Bruno Martins, <i>Combining Multiple String Similarity Metrics for Effective Toponym Matching</i>, International Journal of Digital Earth, 2017 [<a href="http://dx.doi.org/10.1080/17538947.2017.1371253">PDF</a>]</li>		
 <li>Fernando Melo and Bruno Martins, <i>Automated Geocoding of Textual Documents: A Survey of Current Approaches</i>, Transactions in GIS, vol. 21, no. 1, 2017 [<a href="http://onlinelibrary.wiley.com/doi/10.1111/tgis.12212/full">PDF</a>]</li>
@@ -327,6 +328,7 @@ involved in several research projects related to geospatial aspects in informati
 			<h3>Conference and Workshop Papers</h3>
 
 			<ul>
+<!-- <li>Rui Santos, Patricia Murrieta-Flores and Bruno Martins, <i>An Automated Approach for Geocoding Tabular Itineraries</i>, Proceedings of the ACM Workshop on Geographic Information Retrieval, 2017 [<a href="">PDF</a>]</li> -->
 <li>João Monteiro, Asanobu Kitamoto, and Bruno Martins <i>Situational Awareness from Social Media Photographs Using Automated Image Captioning</i>, Proceedings of the IEEE International Conference on Data Science and Advanced Analytics, 2017</li>				
 <li>Francisco Duarte, Bruno Martins, Cátia Sousa Pinto, and Mário J. Silva <i>A Deep Learning Method for ICD-10 Coding of Free-Text Death Certificates</i>, Proceedings of the Portuguese Conference on Artificial Intelligence, 2017 [<a href="https://link.springer.com/chapter/10.1007/978-3-319-65340-2_12">PDF</a>]</li>
 <li>Iman Mirrezaei, Bruno Martins, and Isabel F. Cruz <i>A Distantly Supervised Method for Extracting Spatio-Temporal Information from Text</i>, Proceedings of the ACM SIGSPATIAL International Conference on Advances in Geographic Information Systems, 2016 [<a href="http://dl.acm.org/citation.cfm?id=2996967">PDF</a>] </li>
