--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@ involved in several research projects related to geospatial aspects in informati
     	<tr>
 		<td>
 			2017-2018 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/PRI251795/2017-2018/1-semestre">Information Processing and Retrieval</a> (IST,MEIC,METI)<br/>
-			2017/2018 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/BD81795/2017-2018/1-semestre">Databases</a> (IST,MEIC)<br/>
+			2017/2018 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/BD81795/2017-2018/1-semestre">Databases</a> (IST,LEIC,LETI)<br/>
 			2017/2018 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/TInv9/2017-2018/1-semestre">Research Topics</a> (IST,DEIC)<br/>
 			2016-2017 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/TIS-IBiom/2016-2017/2-semestre">Biomedical Informatics</a> (IST,MEIC,MEBiom)<br/>
 			2016-2017 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/ADSI26/2016-2017/2-semestre">Data Administration in Information Systems</a> (IST,MEIC,METI)<br/>
