--- a/index.html
+++ b/index.html
@@ -624,8 +624,9 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of programe committees and reviewer: </strong>
+						<a href="https://www.ecir2018.org">ECIR'18</a> |
 						<a href="https://agile-online.org/index.php/home-2018">AGILE'18</a> |
-						<a href="">W2GIS'18</a> |
+						<a href="https://w2gis2018.lbd.org.es">W2GIS'18</a> |
 						<a href="http://www.aaai.org/Conferences/AAAI/2018/aaai18call.php">AAAI'18</a> |
 						<a href="http://www.sigapp.org/sac/sac2018/">SAC'18</a> |
 						<a href="http://www.dslab.it.aoyama.ac.jp/dsaa2017/specialsessions/#EnGeoData">IEEE DSAA'17 - EnGeoData</a> |
