--- a/index.html
+++ b/index.html
@@ -624,6 +624,8 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of programe committees and reviewer: </strong>
+						http://sociocom.jp/~event/uistda2018/index.php
+						<a href="http://sociocom.jp/~event/uistda2018/index.php">UISTDA'18</a> |
 						<!-- <a href="http://www.ichmi.org/">ICMHI'18</a> | -->
 						<a href="https://www.ecir2018.org">ECIR'18</a> |
 						<a href="https://agile-online.org/index.php/home-2018">AGILE'18</a> |
