--- a/index.html
+++ b/index.html
@@ -741,6 +741,8 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>						
 						<strong>M.Sc. evaluation comittees: </strong>
+						<a href="IST">Ricardo Abreu</a> |
+						<a href="IST">Diogo Nicolau</a> |
 						<a href="https://sigarra.up.pt/reitoria/pt/pub_geral.show_file?pi_gdoc_id=990883">Paula Fortuna</a> |
 						<a href="https://sigarra.up.pt/feup/en/pub_geral.show_file?pi_gdoc_id=983943">André Pires</a> |
 						<a href="http://hdl.handle.net/10216/106475">João Soares</a> |
