--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@ involved in several research projects related to geospatial aspects in informati
 			<h3>Conference and Workshop Papers</h3>
 
 			<ul>
-<!-- <li>Rui Santos, Patricia Murrieta-Flores and Bruno Martins, <i>An Automated Approach for Geocoding Tabular Itineraries</i>, Proceedings of the ACM Workshop on Geographic Information Retrieval, 2017 [<a href="">PDF</a>]</li> -->
+<li>Rui Santos, Patricia Murrieta-Flores and Bruno Martins, <i>An Automated Approach for Geocoding Tabular Itineraries</i>, Proceedings of the ACM Workshop on Geographic Information Retrieval, 2017 [<a href="">PDF</a>]</li>
 <li>João Monteiro, Asanobu Kitamoto, and Bruno Martins <i>Situational Awareness from Social Media Photographs Using Automated Image Captioning</i>, Proceedings of the IEEE International Conference on Data Science and Advanced Analytics, 2017</li>				
 <li>Francisco Duarte, Bruno Martins, Cátia Sousa Pinto, and Mário J. Silva <i>A Deep Learning Method for ICD-10 Coding of Free-Text Death Certificates</i>, Proceedings of the Portuguese Conference on Artificial Intelligence, 2017 [<a href="https://link.springer.com/chapter/10.1007/978-3-319-65340-2_12">PDF</a>]</li>
 <li>Iman Mirrezaei, Bruno Martins, and Isabel F. Cruz <i>A Distantly Supervised Method for Extracting Spatio-Temporal Information from Text</i>, Proceedings of the ACM SIGSPATIAL International Conference on Advances in Geographic Information Systems, 2016 [<a href="http://dl.acm.org/citation.cfm?id=2996967">PDF</a>] </li>
