--- a/index.html
+++ b/index.html
@@ -624,6 +624,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of programe committees and reviewer: </strong>
+						<a href="https://sites.google.com/site/socialnlp2018/">SocialNLP'18</a> |
 						<a href="http://sociocom.jp/~event/uistda2018/index.php">UISTDA'18</a> |
 						<!-- <a href="http://www.ichmi.org/">ICMHI'18</a> | -->
 						<a href="https://www.ecir2018.org">ECIR'18</a> |
@@ -639,6 +640,7 @@ involved in several research projects related to geospatial aspects in informati
 						<a href="http://sphinxworkshop.org">SPHINx 2017</a> |
 						<a href="https://wosp.core.ac.uk/jcdl2017/">WOSP'17</a> |
 						<a href="http://ijcai-17.org">IJCAI'17</a> |
+						<a href="https://sites.google.com/site/socialnlp2017/">SocialNLP'17</a> |
 						<a href="http://emnlp2017.net">EMNLP'17</a> |
 						<a href="http://www.efita2017.org/">EFITA'17</a> |
 						<a href="http://www.tpdl.eu/tpdl2017/">TPDL'17</a> |
