--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@ involved in several research projects related to geospatial aspects in informati
 
 			<ul>
 <li>João Monteiro, Bruno Martins and João M. Pires <i>A Hybrid Approach for the Spatial Disaggregation of Socio-Economic Indicators</i>, International Journal of Data Science and Analytics, 2018 [<a href="http://dx.doi.org/10.1007/s41060-017-0080-z">PDF</a>]</li>
-<li>Rui Santos, Patricia Murrieta-Flores, Pável Calado and Bruno Martins, <i>Toponym Matching Through Deep Neural Networks</i>, International Journal of Geographical Information Science, 2017 [<a href="http://dx.doi.org/10.1080/13658816.2017.1390119">PDF</a>]</li>
+<li>Rui Santos, Patricia Murrieta-Flores, Pável Calado and Bruno Martins, <i>Toponym Matching Through Deep Neural Networks</i>, International Journal of Geographical Information Science, 2017 [<a href="http://www.tandfonline.com/doi/full/10.1080/13658816.2017.1390119">PDF</a>]</li>
 <li>Rui Santos, Patricia Murrieta-Flores and Bruno Martins, <i>Combining Multiple String Similarity Metrics for Effective Toponym Matching</i>, International Journal of Digital Earth, 2017 [<a href="http://dx.doi.org/10.1080/17538947.2017.1371253">PDF</a>]</li>		
 <li>Fernando Melo and Bruno Martins, <i>Automated Geocoding of Textual Documents: A Survey of Current Approaches</i>, Transactions in GIS, vol. 21, no. 1, 2017 [<a href="http://onlinelibrary.wiley.com/doi/10.1111/tgis.12212/full">PDF</a>]</li>
 <li>Tiago Gonçalves, Ana Paula Afonso and Bruno Martins, <i>Cartographic Visualization of Human Trajectory Data: Overview and Analysis</i>, Journal of Location Based Services, vol. 9, no. 2, 2015 [<a href="http://www.tandfonline.com/doi/full/10.1080/17489725.2015.1074736">PDF</a>]</li>
