--- a/index.html
+++ b/index.html
@@ -564,11 +564,11 @@ involved in several research projects related to geospatial aspects in informati
 			<li>Francisco Carreira, <a href=""><i>Extracção de Palavras Chave e Caracterização Geo-Temporal da sua Ocorrência</i></a>, IST, 2017 (<i>co-supervised with Dr. Miguel Won</i>)</li> <!-- 17 valores -->
 			<li>Rui Santos, <a href=""><i>Georreferenciação automática de descrições de rotas históricas</i></a>, IST, 2017 (<i>co-supervised with Prof. Patricia Murrieta-Flores</i>)</li> <!-- 19 valores -->
 			<li>Francisco Duarte, <a href=""><i>Classificação automática de causas de mortalidade</i></a>, IST, 2017 (<i>co-supervised with Prof. Mário J. Silva</i>)</li> <!-- 19 valores -->
+			<li>Mauro Teles, <a href=""><i>Geocodificação e Datação Automática de Obras Musicais com Base no Conteúdo Audio</i></a>, IST, 2017 (<i>co-supervised with Prof. David Matos</i>)</li> <!-- 15 valores -->
 				
 			<li>Ricardo Custódio, <a href=""><i>Resolução de nomes de locais em documentos de texto</i></a>, IST, 2017 (<i>co-supervised with Dr. Miguel Won</i>)</li> <!-- ?? valores -->
 			<li>Carlos Ribeiro, <a href=""><i>Aprendizagem automática distribuída para análise de dados geo-espaciais e/ou geo-temporais</i></a>, IST, 2017 (<i>co-supervised with Prof. Paolo Romano</i>)</li> <!-- ?? valores -->
 			<li>Rui Figueira, <a href=""><i>Datação Automática de Documentos Textuais</i></a>, IST, 2017 (<i>co-supervised with Dr. Daniel Gomes</i>)</li> <!-- ?? valores -->
-			<li>Mauro Teles, <a href=""><i>Geocodificação e Datação Automática de Obras Musicais com Base no Conteúdo Audio</i></a>, IST, 2017 (<i>co-supervised with Prof. David Matos</i>)</li> <!-- ?? valores -->
 			<li>Valter Matos, <a href=""><i>Resolução de Entidades Duplicadas Através da Combinação de Medidas de Similaridade</i></a>, IST, 2017</li> <!-- ?? valores -->
 			<li>Barbara Pinho, <a href=""><i>SleepData - A sleep disorders clinical database</i></a>, IST, 2017 (<i>co-supervised with Prof. Mário J. Silva</i>)</li> <!-- ?? valores -->
 			<li>Tiago Castanheira, <a href=""><i>SleepData - A study on sleep disorders</i></a>, IST, 2017 (<i>co-supervised with Prof. Mário J. Silva</i>)</li> <!-- ?? valores -->
