--- a/index.html
+++ b/index.html
@@ -682,6 +682,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Reviewer in international journals: </strong>
+						<a href="https://link.springer.com/journal/10707">GeoInformatica</a> |
 						<a href="https://www.cambridge.org/core/journals/natural-language-engineering">Journal of Natural Language Engineering</a> |
 						<a href="http://www.mdpi.com/journal/algorithms">Algorithms</a> |
 						<a href="http://www.emeraldinsight.com/loi/prog">Program</a> |
