--- a/index.html
+++ b/index.html
@@ -725,6 +725,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>						
 						<strong>Ph.D. evaluation comittees: </strong>
+						<a href="https://www.researchgate.net/profile/Zhaochen_Guo">Zhaochen Guo</a> | 
 						<!-- <a href="https://www.l2f.inesc-id.pt/w/Paula_Cristina_Vaz_Lobo">Paula Vaz</a> | -->
 						<a href="http://josedevezas.com/">José Devezas</a> | 
 						<a href="http://www.contrib.andrew.cmu.edu/~baojiany/">Baojiang (Chris) Yang</a> | 
