--- a/index.html
+++ b/index.html
@@ -599,6 +599,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of organization committees: </strong>
+						<a href="http://lxmls.it.pt/">LxMLS'18</a> |
 						<a href="https://bgmartins.github.io/sigspatial-geohumanities/">SIGSPATIAL GeoHumanities'17</a> |
 						<a href="http://lxmls.it.pt/">LxMLS'17</a> |
 						<a href="">TeMA'17</a> |
