--- a/index.html
+++ b/index.html
@@ -625,6 +625,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of programe committees and reviewer: </strong>
+						<a href="http://www.ijcai-18.org">IJCAI-ECAI'18</a> |
 						<a href="http://dhere.de/locweb2018/">LocWeb'18</a> |
 						<a href="http://text2story18.inesctec.pt">Text2Story'18</a> |
 						<a href="https://sites.google.com/site/socialnlp2018/">SocialNLP'18</a> |
