--- a/index.html
+++ b/index.html
@@ -568,11 +568,12 @@ involved in several research projects related to geospatial aspects in informati
 			<li>Mauro Teles, <a href=""><i>Geocodificação e Datação Automática de Obras Musicais com Base no Conteúdo Audio</i></a>, IST, 2017 (<i>co-supervised with Prof. David Matos</i>)</li> <!-- 15 valores -->			
 			<li>Ricardo Custódio, <a href=""><i>Resolução de nomes de locais em documentos de texto</i></a>, IST, 2017 (<i>co-supervised with Dr. Miguel Won</i>)</li> <!-- 15 valores -->
 				
-			<li>Carlos Ribeiro, <a href=""><i>Aprendizagem automática distribuída para análise de dados geo-espaciais e/ou geo-temporais</i></a>, IST, 2017 (<i>co-supervised with Prof. Paolo Romano</i>)</li> <!-- ?? valores -->
-			<li>Rui Figueira, <a href=""><i>Datação Automática de Documentos Textuais</i></a>, IST, 2017 (<i>co-supervised with Dr. Daniel Gomes</i>)</li> <!-- ?? valores -->
+			<li>Carlos Ribeiro, <a href=""><i>Aprendizagem automática distribuída para análise de dados geo-espaciais e/ou geo-temporais</i></a>, IST, 2017 (<i>co-supervised with Prof. Paolo Romano</i>)</li> <!-- 13 valores -->
+			<li>Rui Figueira, <a href=""><i>Datação Automática de Documentos Textuais</i></a>, IST, 2017 (<i>co-supervised with Dr. Daniel Gomes</i>)</li> <!-- 17 valores -->
+			<li>Barbara Pinho, <a href=""><i>SleepData - A sleep disorders clinical database</i></a>, IST, 2017 (<i>co-supervised with Prof. Mário J. Silva</i>)</li> <!-- 18 valores -->
+			<li>Tiago Castanheira, <a href=""><i>SleepData - A study on sleep disorders</i></a>, IST, 2017 (<i>co-supervised with Prof. Mário J. Silva</i>)</li> <!-- 18 valores -->
+
 			<li>Valter Matos, <a href=""><i>Resolução de Entidades Duplicadas Através da Combinação de Medidas de Similaridade</i></a>, IST, 2017</li> <!-- ?? valores -->
-			<li>Barbara Pinho, <a href=""><i>SleepData - A sleep disorders clinical database</i></a>, IST, 2017 (<i>co-supervised with Prof. Mário J. Silva</i>)</li> <!-- ?? valores -->
-			<li>Tiago Castanheira, <a href=""><i>SleepData - A study on sleep disorders</i></a>, IST, 2017 (<i>co-supervised with Prof. Mário J. Silva</i>)</li> <!-- ?? valores -->
 			<li>Paulo Alves, <a href=""><i>Extracção de argumentos desde documentos textuais</i></a>, IST, 2018 (<i>co-supervised with Dr. Miguel Won</i>)</li> <!-- ?? valores -->
 			<li>Frederico Rodrigues, <a href=""><i>Sumarização Automática de Documentos Através de Algoritmos Genéticos</i></a>, IST, 2018 (<i>co-supervised with Prof. Ricardo Ribeiro</i>)</li> <!-- ?? valores -->
 			<li>Miguel Vieira, <a href=""><i>Vigilância Epidemiológica de Eventos de Massas</i></a>, IST, 2018 (<i>co-supervised with Prof. Mário J. Silva</i>)</li> <!-- ?? valores -->
@@ -626,6 +627,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of programe committees and reviewer: </strong>
+						<a href="https://dh2018.adho.org/en/">DH'18</a> |
 						<a href="http://www.ijcai-18.org">IJCAI-ECAI'18</a> |
 						<a href="http://dhere.de/locweb2018/">LocWeb'18</a> |
 						<a href="http://text2story18.inesctec.pt">Text2Story'18</a> |
