--- a/index.html
+++ b/index.html
@@ -626,6 +626,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of programe committees and reviewer: </strong>
+						<a href="http://acl2018.org">ACL'18</a> |
 						<a href="http://naacl2018.org">NAACL-HLT'18</a> |
 						<a href="https://dh2018.adho.org/en/">DH'18</a> |
 						<a href="http://www.ijcai-18.org">IJCAI-ECAI'18</a> |
