--- a/index.html
+++ b/index.html
@@ -688,6 +688,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Reviewer in international journals: </strong>
+						<a href="https://www.computer.org/web/tmc">Transactions on Mobile Computing</a> |						
 						<a href="https://link.springer.com/journal/10707">GeoInformatica</a> |
 						<a href="https://www.cambridge.org/core/journals/natural-language-engineering">Journal of Natural Language Engineering</a> |
 						<a href="http://www.mdpi.com/journal/algorithms">Algorithms</a> |
