--- a/index.html
+++ b/index.html
@@ -626,6 +626,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of programe committees and reviewer: </strong>
+						<a href="https://spatial-language.github.io/">SpLU'18</a> |
 						<a href="http://acl2018.org">ACL'18</a> |
 						<a href="http://naacl2018.org">NAACL-HLT'18</a> |
 						<a href="https://dh2018.adho.org/en/">DH'18</a> |
@@ -754,6 +755,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>						
 						<strong>M.Sc. evaluation comittees: </strong>
+						<a href="FCUL">Cláudio Vieira</a> |
 						<a href="IST">Ricardo Abreu</a> |
 						<a href="IST">Diogo Nicolau</a> |
 						<a href="https://sigarra.up.pt/reitoria/pt/pub_geral.show_file?pi_gdoc_id=990883">Paula Fortuna</a> |
