--- a/index.html
+++ b/index.html
@@ -755,6 +755,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>						
 						<strong>M.Sc. evaluation comittees: </strong>
+						<a href="DEEC">Pedro Ferreira</a> |
 						<a href="FCUL">Cláudio Vieira</a> |
 						<a href="IST">Ricardo Abreu</a> |
 						<a href="IST">Diogo Nicolau</a> |
