--- a/index.html
+++ b/index.html
@@ -572,7 +572,7 @@ involved in several research projects related to geospatial aspects in informati
 			<li>Barbara Pinho, <a href=""><i>SleepData - A sleep disorders clinical database</i></a>, IST, 2017 (<i>co-supervised with Prof. Mário J. Silva</i>)</li> <!-- 18 valores -->
 			<li>Tiago Castanheira, <a href=""><i>SleepData - A study on sleep disorders</i></a>, IST, 2017 (<i>co-supervised with Prof. Mário J. Silva</i>)</li> <!-- 18 valores -->
 
-			<li>Valter Matos, <a href=""><i>Resolução de Entidades Duplicadas Através da Combinação de Medidas de Similaridade</i></a>, IST, 2017</li> <!-- ?? valores -->
+			<li>Valter Matos, <a href=""><i>Resolução de Entidades Duplicadas Através da Combinação de Medidas de Similaridade</i></a>, IST, 2018</li> <!-- ?? valores -->
 			<li>Paulo Alves, <a href=""><i>Extracção de argumentos desde documentos textuais</i></a>, IST, 2018 (<i>co-supervised with Dr. Miguel Won</i>)</li> <!-- ?? valores -->
 			<li>Frederico Rodrigues, <a href=""><i>Sumarização Automática de Documentos Através de Algoritmos Genéticos</i></a>, IST, 2018 (<i>co-supervised with Prof. Ricardo Ribeiro</i>)</li> <!-- ?? valores -->
 			<li>Miguel Vieira, <a href=""><i>Vigilância Epidemiológica de Eventos de Massas</i></a>, IST, 2018 (<i>co-supervised with Prof. Mário J. Silva</i>)</li> <!-- ?? valores -->
@@ -583,7 +583,10 @@ involved in several research projects related to geospatial aspects in informati
 			<li>Luís Borges, <a href=""><i>Análise de texto com redes neuronais profundas para a detecção de notícias falsas</i></a>, IST, 2018 (<i>co-supervised with Prof. Pavel Calado</i>)</li> <!-- ?? valores -->
 			<li>Filipe Monteiro, <a href=""><i>Classificar restaurantes de acordo com dados do Yelp e relatórios de inspecção sanitária</i></a>, IST, 2018 (<i>co-supervised with Prof. Mário J. Silva</i>)</li> <!-- ?? valores -->
 			<li>João Godinho, <a href=""><i>Detecção e atribuição de citações em artigos de jornais</i></a>, IST, 2018 (<i>co-supervised with Prof. Henrique Cardoso</i>)</li> <!-- ?? valores -->
-			<li>Marina Ferreira, <a href=""><i>Mapeamento de registos duplicados com técnicas de deep learning</i></a>, IST, 2017 (<i>co-supervised with Prof. Pável Calado</i>)</li> <!-- ?? valores -->
+			<li>Marina Ferreira, <a href=""><i>Mapeamento de registos duplicados com técnicas de deep learning</i></a>, IST, 2018 (<i>co-supervised with Prof. Pável Calado</i>)</li> <!-- ?? valores -->
+
+			<!-- <li>Daniel Botas, <a href=""><i>Prospecção de informação em bases de dados de prescrições electrónicas</i></a>, IST, 2017 (<i>co-supervised with Prof. Luísa Coheur</i>)</li>--> <!-- ?? valores -->				
+			<!-- <li>Luis Santos, <a href=""><i>Named Entity Recotnition over Historical Documents</i></a>, IST, 2017 (<i>co-supervised with Prof. Luísa Coheur</i>)</li>--> <!-- ?? valores -->				
 			<!-- <li>Ângela Ferreira, <a href=""><i>Question generation with deep neural networks</i></a>, IST, 2017 (<i>co-supervised with Prof. Luísa Coheur</i>)</li>--> <!-- ?? valores -->				
 			</ul>
 		</td>
