--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 						<table border=0 cellspacing=0 cellpadding=0>
 							<tr>
 								<td>
-									<img border="0" src="my-photo.jpg" width="150" style="border-radius: 50%;">
+									<img border="0" src="my-photo3.jpg" width="150" style="border-radius: 50%;">
 								</td>
 							<tr>
 						</table>
