--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 						<table border=0 cellspacing=0 cellpadding=0>
 							<tr>
 								<td>
-									<img border="0" src="my-photo3.jpg" width="150" style="border-radius: 50%;">
+									<img border="0" src="my-photo.jpg" width="150" style="border-radius: 50%;">
 								</td>
 							<tr>
 						</table>
@@ -189,7 +189,7 @@ involved in several research projects related to geospatial aspects in informati
 		<td align="right" valign="top" width="200">
 			<table border=0 cellspacing=0 cellpadding=0>
 				<tr align="center">
-					<td><img src="my-photo.jpg" width="150" style="border-radius: 50%;"/></td>
+					<td><img src="my-photo3.jpg" width="150" style="border-radius: 50%;"/></td>
 				</tr>
 				<tr><td>&nbsp;</td></tr>
 				<tr><td>&nbsp;</td></tr>
