--- a/index.html
+++ b/index.html
@@ -629,6 +629,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of programe committees and reviewer: </strong>
+						<a href="https://sites.google.com/view/trac1/home">TRAC'18</a> |
 						<a href="http://www.lac.inpe.br/ST-Analytics/">ST-Analytics'18</a> |
 						<a href="https://spatial-language.github.io/">SpLU'18</a> |
 						<a href="http://acl2018.org">ACL'18</a> |
