--- a/index.html
+++ b/index.html
@@ -629,6 +629,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of programe committees and reviewer: </strong>
+						<a href="http://www.kdd.org/kdd2018/">KDD'18</a> |
 						<a href="https://wosp.core.ac.uk/lrec2018/">WOSP'18</a> |
 						<a href="https://sites.google.com/view/trac1/home">TRAC'18</a> |
 						<a href="http://www.lac.inpe.br/ST-Analytics/">ST-Analytics'18</a> |
@@ -761,6 +762,11 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>						
 						<strong>M.Sc. evaluation comittees: </strong>
+						<a href="DEI-AMARQUES-PROJECTO">Rui Santos</a> |
+						<a href="DEI-MAMEDE-PROJECTO">Valentyn Hulevych</a> |
+						<a href="DEI-DIOGO-PROJECTO">João Vicente</a> |
+						<a href="DEI-LUISA-PROJECTO">Margarida Correia</a> |
+						<a href="DEI-PAVEL-PROJECTO">Ricardo Pereira</a> |
 						<a href="DEEC">Pedro Ferreira</a> |
 						<a href="FCUL">Cláudio Vieira</a> |
 						<a href="IST">Ricardo Abreu</a> |
