--- a/index.html
+++ b/index.html
@@ -629,6 +629,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of programe committees and reviewer: </strong>
+						<a href="http://www.tpdl.eu/tpdl2018/">TPDL'18</a> |
 						<a href="http://www.kdd.org/kdd2018/">KDD'18</a> |
 						<a href="https://wosp.core.ac.uk/lrec2018/">WOSP'18</a> |
 						<a href="https://sites.google.com/view/trac1/home">TRAC'18</a> |
