--- a/index.html
+++ b/index.html
@@ -585,11 +585,12 @@ involved in several research projects related to geospatial aspects in informati
 			<li>Luís Borges, <a href=""><i>Análise de texto com redes neuronais profundas para a detecção de notícias falsas</i></a>, IST, 2018 (<i>co-supervised with Prof. Pavel Calado</i>)</li> <!-- ?? valores -->
 			<li>Filipe Monteiro, <a href=""><i>Classificar restaurantes de acordo com dados do Yelp e relatórios de inspecção sanitária</i></a>, IST, 2018 (<i>co-supervised with Prof. Mário J. Silva</i>)</li> <!-- ?? valores -->
 			<li>João Godinho, <a href=""><i>Detecção e atribuição de citações em artigos de jornais</i></a>, IST, 2018 (<i>co-supervised with Prof. Henrique Cardoso</i>)</li> <!-- ?? valores -->
-			<li>Marina Ferreira, <a href=""><i>Mapeamento de registos duplicados com técnicas de deep learning</i></a>, IST, 2018 (<i>co-supervised with Prof. Pável Calado</i>)</li> <!-- ?? valores -->
 
-			<!-- <li>Daniel Botas, <a href=""><i>Prospecção de informação em bases de dados de prescrições electrónicas</i></a>, IST, 2017 (<i>co-supervised with Prof. Luísa Coheur</i>)</li>--> <!-- ?? valores -->				
-			<!-- <li>Luis Santos, <a href=""><i>Named Entity Recotnition over Historical Documents</i></a>, IST, 2017 (<i>co-supervised with Prof. Luísa Coheur</i>)</li>--> <!-- ?? valores -->				
-			<!-- <li>Ângela Ferreira, <a href=""><i>Question generation with deep neural networks</i></a>, IST, 2017 (<i>co-supervised with Prof. Luísa Coheur</i>)</li>--> <!-- ?? valores -->				
+			<li>Duarte Pompeu, <a href=""><i>Classificação automática de lendas e mitos populares</i></a>, IST, 2018 (<i>co-supervised with Prof. David Matos</i>)</li> <!-- ?? valores -->
+			<li>Rafael Miranda, <a href=""><i>Deep learning para classificação automática de notas de alta hospitalar segundo códigos ICD10</i></a>, IST, 2018 (<i>co-supervised with Prof. Mário Silva</i>)</li> <!-- ?? valores -->
+			<li>Daniel Botas, <a href=""><i>Prospecção de informação em bases de dados de prescrições electrónicas</i></a>, IST, 2018 (<i>co-supervised with Prof. Mário Silva</i>)</li> <!-- ?? valores -->
+			<li>Luis Santos, <a href=""><i>Named Entity Recognition over Historical Documents</i></a>, IST, 2018 (<i>co-supervised with Dr. Pedro Balage</i>)</li> <!-- ?? valores -->
+			<li>Ângela Ferreira, <a href=""><i>Question generation with deep neural networks</i></a>, IST, 2018 (<i>co-supervised with Prof. Luísa Coheur</i>)</li> <!-- ?? valores -->
 			</ul>
 		</td>
     </tr>
