--- a/index.html
+++ b/index.html
@@ -473,6 +473,7 @@ involved in several research projects related to geospatial aspects in informati
     <tr>
 		<td>
 			<ul>
+<li>Curating and assimilating crowdsourced and authoritative data to reduce uncertainty in river flow modeling (RiverCure - FCT 29360/2017)</li>
 <li><a href="https://diggingintodata.org/awards/2016/project/digging-early-colonial-mexico">Digging into Early Colonial Mexico: A large-scale computational analysis of 16th century historical sources (DigCH - T-AP HJ-253525)</a></li>
 <li>Reassembling the Republic of Letters (COST ACTION IS1310)</li>
 <li>Da monitorização de fluxos de dados globais à recomendação com base em contexto (GoLocal - FCT CMUP­ERI/TIC/0046/2014)</li>
