--- a/index.html
+++ b/index.html
@@ -315,6 +315,7 @@ involved in several research projects related to geospatial aspects in informati
 			<h3>International Journal Papers</h3>
 
 			<ul>
+<li>Francisco Duarte, Bruno Martins, Cátia Sousa Pinto, and Mário J. Silva <i>Deep Neural Models for ICD-10 Coding of Death Certificates and Autopsy Reports in Free-Text</i>, Journal of Biomedical Informatics, 2018 [<a href="">PDF</a>]</li>
 <li>Miguel Won, Patricia Murrieta-Flores, and Bruno Martins <i>Ensemble NER: Evaluating Named Entity Recognition Tools in the Identification of Place Names in Historical Corpora</i>, Frontiers in Digital Humanities, 2018 [<a href="https://www.frontiersin.org/articles/10.3389/fdigh.2018.00002/abstract">PDF</a>]</li>	
 <li>João Monteiro, Bruno Martins and João M. Pires <i>A Hybrid Approach for the Spatial Disaggregation of Socio-Economic Indicators</i>, International Journal of Data Science and Analytics, 2018 [<a href="http://dx.doi.org/10.1007/s41060-017-0080-z">PDF</a>]</li>
 <li>Rui Santos, Patricia Murrieta-Flores, Pável Calado and Bruno Martins, <i>Toponym Matching Through Deep Neural Networks</i>, International Journal of Geographical Information Science, 2017 [<a href="http://www.tandfonline.com/doi/full/10.1080/13658816.2017.1390119">PDF</a>]</li>
