--- a/index.html
+++ b/index.html
@@ -332,6 +332,8 @@ involved in several research projects related to geospatial aspects in informati
 			<h3>Conference and Workshop Papers</h3>
 
 			<ul>
+<li>Rui Santos, Patricia Murrieta-Flores and Bruno Martins, <i>Combining String Matching and Cost Minimization Algorithms for Automatically Geocoding Tabular Itineraries</i>, Proceedings of the Digital Humanities Conference, 2018 [<a href="">PDF</a>]</li>
+<li>João Monteiro, Bruno Martins, Patricia Murrieta-Flores and João M. Pires, <i>Spatial Disaggregation of Historical Census Data Leveraging Multiple Sources of Ancillary Data</i>, Proceedings of the Digital Humanities Conference, 2018 [<a href="">PDF</a>]</li>
 <li>Rui Santos, Patricia Murrieta-Flores and Bruno Martins, <i>An Automated Approach for Geocoding Tabular Itineraries</i>, Proceedings of the ACM Workshop on Geographic Information Retrieval, 2017 [<a href="https://dl.acm.org/citation.cfm?id=3155908">PDF</a>]</li>
 <li>João Monteiro, Asanobu Kitamoto, and Bruno Martins <i>Situational Awareness from Social Media Photographs Using Automated Image Captioning</i>, Proceedings of the IEEE International Conference on Data Science and Advanced Analytics, 2017 [<a href="http://dx.doi.org/10.1109/DSAA.2017.50">PDF</a>]</li>	
 <li>Francisco Duarte, Bruno Martins, Cátia Sousa Pinto, and Mário J. Silva <i>A Deep Learning Method for ICD-10 Coding of Free-Text Death Certificates</i>, Proceedings of the Portuguese Conference on Artificial Intelligence, 2017 [<a href="https://link.springer.com/chapter/10.1007/978-3-319-65340-2_12">PDF</a>]</li>
